<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="FB_MKS_909" Id="{4824be5d-8914-4b65-a2b0-fc2cd41c1dfa}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_MKS_909
VAR_INPUT
	stVolume : ST_Volume;
END_VAR
VAR_OUTPUT
END_VAR
VAR_IN_OUT
	stGauge	:	ST_MKS_909;
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(* 
MKS 909 Vacuum gauge

A vacuum gauge takes as input, the pressure of the volume it is attached to,
and produces on its analog output, a corresponding voltage.

A.Pai
3/29/2017
*)

IF stGauge.i_xHvOn AND stGauge.q_xGaugeConnected THEN//If gauge is connected and fully on

	(*set gauge real pressure based on chamber real pressure*)
	stGauge.rPress := stVolume.rPressure;
	(*set gauge raw pressure based on transformation of real pressure*)
	stGauge.q_iRawPress := M_MKS_909(stGauge);// gauge on

ELSE//gauge gets disconnected

	stGauge.rPress := 0;
	stGauge.q_iRawPress := 0; // gauge not on ??

END_IF]]></ST>
    </Implementation>
    <Method Name="M_MKS_909" Id="{e65ddd55-a27c-4132-9505-803e3e5f86ef}">
      <Declaration><![CDATA[METHOD PRIVATE M_MKS_909 : INT
VAR_INPUT
	stGauge	:	ST_MKS_909;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[(* Converts real pressure to digital voltage for MKS 909 *)
IF stGauge.rPress <> 0 THEN
	M_MKS_909 := REAL_TO_INT( (32767/10) * (LOG( stGauge.rPress ) + 10) );
ELSE
	M_MKS_909 := 0;
END_IF]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_MKS_909">
      <LineId Id="14" Count="5" />
      <LineId Id="58" Count="0" />
      <LineId Id="20" Count="1" />
      <LineId Id="26" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="57" Count="0" />
      <LineId Id="40" Count="1" />
      <LineId Id="28" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="56" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="54" Count="0" />
      <LineId Id="32" Count="1" />
      <LineId Id="55" Count="0" />
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="FB_MKS_909.M_MKS_909">
      <LineId Id="6" Count="4" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>